terraform/vpc/beforegoingd_apnortheast2/route_table_routes.tf
# Routes for internet gateway which will be set in public subnet
resource "aws_route" "public_igw" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.default.id
}

# Routes for NAT gateway which will be set in private subnet
resource "aws_route" "private_nat" {
  # count                  = length(var.availability_zones)
  # route_table_id         = element(aws_route_table.private.*.id, count.index)
  # destination_cidr_block = "0.0.0.0/0"
  # nat_gateway_id         = element(aws_nat_gateway.default.*.id, count.index)

  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.default.id
}
